--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -315,9 +315,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/niagaplace-transperent-sm.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/niagaplace.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/niagaplace-transperent-sm.PNG" alt="" class="img-fluid">
+                  <img src="assets/img/niagaplace.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
