update main page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -141,7 +141,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      I'm a graduate from UiTM Shah Alam, Bachelor in Computer Science Netcentric Computing.  
+                      I hold a Bachelor's degree in Netcentric Computing with a major in Computer Science from UiTM Shah Alam.  
                     </p>
                     <p class="lead">
                       From the moment I first wrote my 'Hello, World!' program, I was captivated by the world of programming. The ability to transform lines of code into functional and impactful applications fascinated me, igniting a lifelong passion for creating elegant solutions to complex problems.
@@ -471,8 +471,7 @@
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        Afiq's exemplary work ethic is truly commendable; he consistently puts forth unwavering effort to overcome challenges and successfully complete tasks. Even when faced with obstacles, he remains resolute and dedicated, channeling his determination into finding effective solutions.
-                        Afiq's ability to navigate difficulties with a positive attitude and perseverance is a testament to his strong character and his commitment to delivering high-quality results.
+                        I enthusiastically recommend Afiq, as he have consistently demonstrated an unwavering commitment to their work, maintained the highest levels of professionalism, and exhibited a remarkable capacity for collaboration. Their collective efforts have significantly enhanced our team's overall success, and their positive contributions have had a lasting impact on our work environment.
                       </p>
                     </div>
                   </div>
