add whatsapp button

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -79,11 +79,12 @@
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-4">I am Afiq Firdaus</h1>
-          <p class="hero-subtitle"><span class="typed"
-              data-typed-items="Web Developer, Freelancer, Badminton Athlete"></span></p>
-          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
+          <h1 class="hero-title mb-4">Muhammad Afiq Firdaus</h1>
+          <p class="hero-subtitle">
+            <span class="typed"
+              data-typed-items="Full Stack Laravel Developer, Backend & API Specialist, Web Application Engineer">
+            </span>
+          </p>
         </div>
       </div>
     </div>
@@ -129,6 +130,15 @@
                     <span class="skill-badge">JavaScript</span>
                   </div>
 
+                  <strong class="mt-3 d-block">Other</strong>
+                  <div class="skills-list">
+                    <span class="skill-badge">REST API</span>
+                    <span class="skill-badge">Git / GitLab</span>
+                    <span class="skill-badge">Payment Gateway</span>
+                    <span class="skill-badge">Google APIs</span>
+                  </div>
+
+
 
                 </div>
                 <div class="col-md-6">
@@ -166,66 +176,6 @@
         </div>
       </div>
     </section><!-- End About Section -->
-
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services-mf pt-5 route">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="title-box text-center">
-              <h3 class="title-a">
-                Services
-              </h3>
-              <p class="subtitle-a">
-                <!-- Lorem ipsum, dolor sit amet consectetur adipisicing elit. -->
-              </p>
-              <div class="line-mf"></div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Web Development</h2>
-                <p class="s-description text-center">
-
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Web Design</h2>
-                <p class="s-description text-center">
-
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Responsive Design</h2>
-                <p class="s-description text-center">
-
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Services Section -->
 
     <!-- ======= Counter Section ======= -->
     <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
@@ -282,6 +232,73 @@
         </div>
       </div>
     </div><!-- End Counter Section -->
+
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services-mf pt-5 route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a">
+                Services
+              </h3>
+              <p class="subtitle-a">
+                <!-- Lorem ipsum, dolor sit amet consectetur adipisicing elit. -->
+              </p>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Web Development</h2>
+                <p class="s-description text-center">
+                  Development of secure and scalable web applications using Laravel, MySQL, and modern frontend
+                  technologies.
+                </p>
+
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Web Design</h2>
+                <p class="s-description text-center">
+                  Clean, responsive, and user-focused interface design using Bootstrap and custom CSS.
+                </p>
+
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Responsive Design</h2>
+                <p class="s-description text-center">
+                  Mobile-first and cross-browser compatible layouts to ensure optimal user experience on all devices.
+                </p>
+
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="work" class="portfolio-mf sect-pt4 route">
@@ -848,30 +865,59 @@
                         Get in Touch
                       </h5>
                     </div>
+
                     <div class="more-info">
                       <p class="lead">
-                        Please feel free to contact me if you have any question!
-                        I am really glad to create new connection and to know new people.
+                        Please feel free to contact me if you have any questions.
+                        I am always open to new connections and opportunities.
                       </p>
+
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> No 46, Jalan Pegaga U12/4 , 40170 Shah Alam, Selangor
+                        <li>
+                          <span class="bi bi-whatsapp"></span>
+                          <a href="https://wa.me/60199300141" target="_blank" rel="noopener noreferrer">
+                            Chat via WhatsApp
+                          </a>
                         </li>
-                        <li><span class="bi bi-phone"></span> (60) 1993-00141</li>
-                        <li><span class="bi bi-envelope"></span> afiqfirdaus89@gmail.com</li>
+
+                        <li>
+                          <span class="bi bi-envelope"></span>
+                          <a href="mailto:afiqfirdaus89@gmail.com" target="_blank" rel="noopener noreferrer">
+                            afiqfirdaus89@gmail.com
+                          </a>
+                        </li>
                       </ul>
                     </div>
+
                     <div class="socials">
                       <ul>
-                        <li><a href="https://www.facebook.com/afiq.chelsea.18/"><span class="ico-circle"><i
-                                class="bi bi-facebook"></i></span></a></li>
-                        <li><a href="https://www.instagram.com/fs.fiq"><span class="ico-circle"><i
-                                class="bi bi-instagram"></i></span></a></li>
-                        <!-- <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li> -->
-                        <li><a href="https://www.linkedin.com/in/afiq-firdaus"><span class="ico-circle"><i
-                                class="bi bi-linkedin"></i></span></a></li>
+                        <!-- <li>
+                          <a href="https://www.facebook.com/afiq.chelsea.18/" target="_blank" rel="noopener noreferrer">
+                            <span class="ico-circle">
+                              <i class="bi bi-facebook"></i>
+                            </span>
+                          </a>
+                        </li> -->
+
+                        <li>
+                          <a href="https://www.instagram.com/fs.fiq" target="_blank" rel="noopener noreferrer">
+                            <span class="ico-circle">
+                              <i class="bi bi-instagram"></i>
+                            </span>
+                          </a>
+                        </li>
+
+                        <li>
+                          <a href="https://www.linkedin.com/in/afiq-firdaus" target="_blank" rel="noopener noreferrer">
+                            <span class="ico-circle">
+                              <i class="bi bi-linkedin"></i>
+                            </span>
+                          </a>
+                        </li>
                       </ul>
                     </div>
                   </div>
+
                 </div>
               </div>
             </div>
@@ -903,6 +949,11 @@
       </div>
     </div>
   </footer><!-- End  Footer -->
+
+  <a href="https://wa.me/60199300141" class="whatsapp-float" target="_blank" title="Chat with me on WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+  </a>
+
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
