--- a/portfolio/niagaplace-details.html
+++ b/portfolio/niagaplace-details.html
@@ -43,7 +43,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto " href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#work">Work</a></li>
@@ -77,15 +77,11 @@
     <div class="overlay-mf"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
-        <div class="container">
-          <h2 class="hero-title mb-4">Niaga Place</h2>
-          <ol class="breadcrumb d-flex justify-content-center">
-            <li class="breadcrumb-item">
-              <a href="#">Home</a>
-            </li>
-            <li class="breadcrumb-item active">Portfolio Details</li>
-          </ol>
+        <div class="container text-center">
+          <img src="assets/img/niagaplace.png" alt="Niaga Place Logo" class="project-logo mb-3">
+          <!-- <h2 class="hero-title mb-4">Niaga Place</h2> -->
         </div>
+
       </div>
     </div>
   </div>
@@ -129,24 +125,33 @@
               </div>
               <div class="swiper-pagination"></div>
             </div>
+            <div class="text-center mt-2 text-muted">
+              <small>Swipe to view more screenshots</small>
+            </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 mb-4">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web Development</li>
                 <li><strong>Client</strong>: Niaga Place</li>
-                <li><strong>Project date</strong>: Oct 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://niaga.place/">Niaga Place</a></li>
+                <!-- <li><strong>Project date</strong>: Oct 2021</li>
+                <li><strong>Project URL</strong>: <a href="https://niaga.place/">Niaga Place</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>About Niaga Place</h2>
               <p>
-                Niaga Place is also an ecommerce website that I maintainance as an Intern(Full Stack Developer) at Lexapay. Here I learn a lot of
+                Niaga Place is also an ecommerce website that I maintainance as an Intern(Full Stack Developer) at
+                Lexapay. Here I learn a lot of
                 things about Laravel with the guidance of my senior developer.
               </p>
+            </div>
+            <div class="mt-4">
+              <a href="index.html#contact" class="btn btn-primary btn-sm">
+                Contact Me
+              </a>
             </div>
           </div>
 
@@ -180,7 +185,8 @@
   </footer><!-- End  Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
