--- a/portfolio/fitmate-details.html
+++ b/portfolio/fitmate-details.html
@@ -43,7 +43,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto " href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#work">Work</a></li>
@@ -77,15 +77,11 @@
     <div class="overlay-mf"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
-        <div class="container">
-          <h2 class="hero-title mb-4">Fitmate</h2>
-          <ol class="breadcrumb d-flex justify-content-center">
-            <li class="breadcrumb-item">
-              <a href="#">Home</a>
-            </li>
-            <li class="breadcrumb-item active">Portfolio Details</li>
-          </ol>
+        <div class="container text-center">
+          <img src="assets/img/fitmate.png" alt="Fitmate Logo" class="project-logo mb-3">
+          <!-- <h2 class="hero-title mb-4">Fitmate</h2> -->
         </div>
+
       </div>
     </div>
   </div>
@@ -121,24 +117,34 @@
               </div>
               <div class="swiper-pagination"></div>
             </div>
+            <div class="text-center mt-2 text-muted">
+              <small>Swipe to view more screenshots</small>
+            </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 mb-4">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web Development</li>
                 <li><strong>Client</strong>: Fitmate</li>
-                <li><strong>Project date</strong>: June 2022</li>
-                <li><strong>Project URL</strong>: <a href="https://www.fitmate.com.my">www.fitmate.com.my</a></li>
+                <!-- <li><strong>Project date</strong>: June 2022</li>
+                <li><strong>Project URL</strong>: <a href="https://www.fitmate.com.my">www.fitmate.com.my</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>About Fitmate</h2>
               <p>
-                Fitmate is an ecommerce website that I created for my client. The origin of Fitmate is from AfterEatz website that I maintainance before 
-                creating this project. Most of the features and function is created by me and follow by Aftereatz website.
+                Fitmate is an ecommerce website that I created for my client. The origin of Fitmate is from AfterEatz
+                website that I maintainance before
+                creating this project. Most of the features and function is created by me and follow by Aftereatz
+                website.
               </p>
+            </div>
+            <div class="mt-4">
+              <a href="index.html#contact" class="btn btn-primary btn-sm">
+                Contact Me
+              </a>
             </div>
           </div>
 
@@ -172,7 +178,8 @@
   </footer><!-- End  Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
